src/objects/QPMS__User_Detail__c.object
<CustomObject>
    <description>This object stores user detail information in complaint module.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__City__c</fullName>
        <description>This field is used to save  patient mailing address city</description>
        <inlineHelpText>Enter patient mailing address city</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <description>This field is used to save complaint Id</description>
        <label>Complaint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFG - AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALB - ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALG - ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AND - ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANG - ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ARG - ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARM - ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARU - ARUBA</fullName>
                </value>
                <value>
                    <fullName>ATR - AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AUS - AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AZE - AZERBAIJIAN</fullName>
                </value>
                <value>
                    <fullName>AZO - AZORES</fullName>
                </value>
                <value>
                    <fullName>BAH - BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAN - BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BAR - BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BEL - BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BEN - BENIN</fullName>
                </value>
                <value>
                    <fullName>BER - BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHR - BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BHU - BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BLR - BELARUS</fullName>
                </value>
                <value>
                    <fullName>BLZ - BELIZE</fullName>
                </value>
                <value>
                    <fullName>BOL - BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOS - BOSNIA-HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOT - BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRA - BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BRN - BURUNDI</fullName>
                </value>
                <value>
                    <fullName>BRU - BRUNEI</fullName>
                </value>
                <value>
                    <fullName>BUL - BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BUR - BURKINA FASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Date_of_Birth__c</fullName>
        <description>This field is used to save  Patient date of birth, DD MMM YYYY</description>
        <inlineHelpText>Patient date of birth, DD MMM YYYY</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone__c</fullName>
        <description>This field is used to save Patient phone number</description>
        <inlineHelpText>Patient phone number (ex.123-234-2334)</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__State_Province__c</fullName>
        <description>This field is used to save patient mailing address state/province</description>
        <inlineHelpText>Enter patient mailing address state/province</inlineHelpText>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Street__c</fullName>
        <description>This field is used to save Street name</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__UDF_01__c</fullName>
        <label>Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__UDF_02__c</fullName>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>QPMS__UDF_03__c</fullName>
        <label>Middle Initial</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>QPMS__Zip_Postal_Code__c</fullName>
        <description>Enter patient mailing address zip code</description>
        <inlineHelpText>Enter patient mailing address zip code</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Consumer Detail</label>
    <nameField>
        <displayFormat>UD-{00000}</displayFormat>
        <label>User Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>